--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@mdx-js/react": "^2.1.0",
     "gatsby": "^4.10.3",
     "gatsby-plugin-image": "^2.10.1",
     "gatsby-plugin-sharp": "^4.10.2",
