--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-plugin-sharp": "^4.10.2",
     "gatsby-plugin-theme-ui": "^0.14.1",
     "gatsby-source-filesystem": "^4.10.1",
+    "gatsby-transformer-json": "^4.10.0",
     "gatsby-transformer-sharp": "^4.10.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
