--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@emotion/react": "^11.8.2",
+    "@fontsource/alata": "^4.5.5",
+    "@fontsource/josefin-sans": "^4.5.6",
     "@mdx-js/react": "^2.1.0",
     "gatsby": "^4.10.3",
     "gatsby-plugin-image": "^2.10.1",
